v1.6.3
   - #465: Translation for Spanish Uruguay by @mlopezcoria
   - #470: Update Polish translation by @tikky
   - #468: Remove PHP 7.3 warnings
   - #38: Bug fix: required_fields doesn't work for relation_n_n fields
v 1.6.2
    - #442: Searching in grid with value 0 is not working
    - #458: Updated Lithuanian language by @dgvirtual
    - #463: Updated Spanish language by @CarlosPinedaT
    - Security fix
v 1.6.1
    - #441: Adding clone functionality - contribution from @portapipe
v 1.6.0
    - #211: Bug if use where clause and try to "search all" the fields
    - #432: Bootstrap Theme issues with filtering when we are using set_relation with multiple fields
    - #353: Adding callback_read_field function
    - #433: Preview click with fancybox to work the same across all the themes
v 1.5.9
    - #420: set_relation with brackets is causing ambiguous column name when the field name exists at the basic table
    - #413: Unexpected error when there are non english chars and a datetime field as column
    - #406: Export button to work without the need of a popup window or new tab
    - Clean-up redundant JavaScript load if it is not required.
    - Remove Export as a flash plugin for security reasons and instead add a download link
v 1.5.8
    - #382: Adding custom error message for set_rules()
    - Two new lang strings for the multiple delete confirmation
    - #388: Chosen select have 100% width at flexigrid theme
v 1.5.7
   - #331: Have a configurable XSS clean option to prevent XSS attacks
   - #370: A faster way to calculate the totals
v 1.5.6
   - Unset bootstrap with more CSS unsets
   - Languages updates (Portuguese, Italian, Spanish)
   - #367: Missing translation for Search {column_name}
v 1.5.5
   Add Croatian language - translated by: Siniša Dragičević Martinčić
   - Small CSS fixes: Datetime and date picker was overflowing in some languages
   - Removing uniform.js
v 1.5.4
   Changes for compatibility without jQuery Migrate
v 1.5.3