@@ -3,6 +3,7 @@ v1.6.3
    - #470: Update Polish translation by @tikky
    - #468: Remove PHP 7.3 warnings
    - #38: Bug fix: required_fields doesn't work for relation_n_n fields
+   - #469: datatables theme - update table fails after delete
 v 1.6.2
     - #442: Searching in grid with value 0 is not working
     - #458: Updated Lithuanian language by @dgvirtual
